# kgllib

./: CMakeLists.txt  Doxyfile  Mainpage.dox  README  deps.dot
cmake/modules/: CMakeLists.txt  FindKGLLib.cmake
core/kgllib/: CMakeLists.txt  batch.cpp  batch.h  camera.cpp  camera.h  fpscounter.cpp  fpscounter.h  geometrybuffer.cpp  glwidget.cpp  glwidget.h  kgllib.cpp  kgllib.h  kgllib_export.h  kgllib_version.cpp  kgllib_version.h.cmake  mesh.cpp  mesh.h  program.cpp  program.h  renderer.cpp  renderer.h  shader.cpp  shader.h  textrenderer.cpp  textrenderer.h  texture.cpp  texture.h
examples/: CMakeLists.txt
examples/coverbling/: CMakeLists.txt  coverbling.cpp  coverbling.h  main.cpp
examples/earth/: CMakeLists.txt  earth.cpp  earth.h  earth.qrc  main.cpp
examples/simpleflying/: CMakeLists.txt  flying.qrc  main.cpp  test.frag  test.vert  testwidget.cpp  testwidget.h
examples/spinninglogos/: CMakeLists.txt  logos.cpp  logos.h  logos.qrc  main.cpp
examples/widgets/: CMakeLists.txt  demoglwidget.cpp  demoglwidget.h  main.cpp  mainwidget.cpp  mainwidget.h
extras/: CMakeLists.txt
extras/kgllib/: CMakeLists.txt  hdrglwidget.cpp  hdrglwidget.h  hdrglwidgetcontrol.cpp  hdrglwidgetcontrol.h  hdrglwidgetcontrol.ui  modelloader.cpp  modelloader.h  rendertarget.cpp  rendertarget.h  shapes.cpp  shapes.h  simpleterrain.cpp  simpleterrain.h  trackball.cpp  trackball.h  widgetproxy.cpp  widgetproxy.h
glew/: CMakeLists.txt  README
